--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>image_transport</build_depend>
@@ -30,6 +31,7 @@
   <!--<build_depend>opencv2</build_depend> -->
   
   <run_depend>roscpp</run_depend>
+   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>image_transport</run_depend>
