--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <!-- Examples: -->
   <!-- Use build_depend for packages you need at compile time: -->
   <build_depend>message_generation</build_depend> 
+  <build_depend>k2_client</build_depend> 
   <run_depend>message_runtime</run_depend> 
  
   <buildtool_depend>catkin</buildtool_depend>
@@ -26,6 +27,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>cv_bridge</build_depend> 
   <!--<build_depend>opencv2</build_depend> -->
@@ -34,6 +36,7 @@
    <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+    <run_depend>geometry_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>cv_bridge</run_depend> 
   <!--<run_depend>opencv2</run_depend> -->
