--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,19 +14,14 @@ find_package(catkin REQUIRED COMPONENTS
   image_transport
   cv_bridge
   k2_client
-  
+  roslaunch
 )
 find_package( OpenCV  REQUIRED )
-#find_package( OpenCV 2.4.11 REQUIRED )
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
+roslaunch_add_file_check(launch)
 
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -56,24 +51,10 @@ set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
  add_message_files(
    FILES
    Expression.msg
-   Interested.msg
    PersonArray.msg
    PersonStatus.msg
  )
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
 
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
@@ -83,25 +64,7 @@ set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
    geometry_msgs
  )
 
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
 
-## To declare and build dynamic reconfigure parameters within this
-## package, follow these steps:
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
-## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
 
 ###################################
 ## catkin specific configuration ##
@@ -137,6 +100,7 @@ include_directories(
  add_library(trollnode
    #src/${PROJECT_NAME}/trollnode.cpp
    src/Person.cpp
+   src/setExpressionFunc.cpp
  )
 
 
@@ -144,86 +108,20 @@ add_executable(publishExpression src/publishExpression.cpp)
 target_link_libraries(publishExpression ${catkin_LIBRARIES})
 add_dependencies(publishExpression trollnode_generate_messages_cpp)
 
+add_executable(lookingNode src/lookingNode.cpp)
+target_link_libraries(lookingNode ${catkin_LIBRARIES})
+add_dependencies(lookingNode trollnode_generate_messages_cpp)
+
 add_executable(greetingNode src/greetingNode.cpp)
 target_link_libraries(greetingNode ${catkin_LIBRARIES})
 add_dependencies(greetingNode trollnode_generate_messages_cpp)
 
 
-add_executable(setExpression src/setExpression.cpp)
+add_executable(setExpression src/setExpression.cpp src/setExpressionFunc.cpp)
 target_link_libraries(setExpression ${catkin_LIBRARIES} ${OpenCV_LIBS})
-add_dependencies(setExpression trollnode_generate_messages_cpp)
+add_dependencies(setExpression  trollnode_generate_messages_cpp )
 
 
 add_executable(estimateInterest src/estimateInterest.cpp src/Person.cpp)
 target_link_libraries(estimateInterest ${catkin_LIBRARIES} )
-add_dependencies(estimateInterest src/Person.cpp trollnode_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
-#message(STATUS ${OpenCV_INCLUDE_DIRS})
-
-#target_link_libraries(trollnode ${OpenCV_LIBS})
-
-
-
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(trollnode ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Declare a C++ executable
-# add_executable(trollnode_node src/trollnode_node.cpp)
-
-## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(trollnode_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(trollnode_node
-#   ${catkin_LIBRARIES}
-# )
-
-#############
-## Install ##
-#############
-
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables and/or libraries for installation
-# install(TARGETS trollnode trollnode_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_trollnode.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+add_dependencies(estimateInterest  trollnode_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
