--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package>
-  <name>trollnode</name>
-  <version>0.0.3</version>
-  <description>The trollnode package</description>
+  <name>estimate_interest</name>
+  <version>1.0.0</version>
+  <description>The estimate_interest package</description>
 
 
   <maintainer email="havard.svoen@gmail.com">Havard Svoen</maintainer>
 
   <license>BSD</license>
 
-  <url type="repository">https://github.com/thentnucyborg/trollnode.git</url> 
+  <url type="repository">https://github.com/thentnucyborg/estimateInterest.git</url> 
   <author email="havard.svoen@gmail.com">Havard Svoen</author> 
 
 
@@ -24,22 +24,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>cv_bridge</build_depend> 
-  <!--<build_depend>opencv2</build_depend> -->
   
   <run_depend>roscpp</run_depend>
-   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
     <run_depend>geometry_msgs</run_depend>
-  <run_depend>image_transport</run_depend>
-  <run_depend>cv_bridge</run_depend> 
-  <!--<run_depend>opencv2</run_depend> -->
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
